--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -477,12 +477,11 @@ html, body {
 
 
 .edit-btn, .cancel-btn {
-    border: none;
-    background: transparent;
+    padding: 5px 5px;
+    margin: 10%;
     cursor: pointer;
     font-size: 16px;
     color: #007bff;
-    transition: color 0.2s ease;
 }
 
 .edit-btn:hover i {
@@ -491,7 +490,6 @@ html, body {
 
 .cancel-btn {
     color: #dc3545;
-    margin-left: 6px;
 }
 
 .cancel-btn:hover {
