--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -216,7 +216,7 @@
                             <div>
                                 {% if row.venue_availabilities %}
                                     {% for va in row.venue_availabilities %}
-                                        <strong>: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</strong><br>
+                                        <strong>: {{ va.venueNumber }} [Capacity Use: {{ va.capacity }}]</strong><br>
                                     {% endfor %}
                                 {% else %}
                                     <strong>: None</strong>
