--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -40,7 +40,7 @@
                             <strong>{{ exam.course_code }} - [{{ exam.course_name }}]</strong><br>
                             {% if exam.venue %}
                                 {% for va in exam.venue %}
-                                    <i>Venue: {{ va.venueNumber }} (Capacity Use: {{ va.capacity }})</i><br>
+                                    <i>Venue: {{ va.venueNumber }} [Capacity Use: {{ va.capacity }}]</i><br>
                                 {% endfor %}
                             {% else %}
                                 <strong>: None</strong>
