--- a/app/templates/user/userViewStaff.html
+++ b/app/templates/user/userViewStaff.html
@@ -42,6 +42,7 @@
                 <th>No</th>
                 <th>Account Status</th> 
                 <th>User ID</th>
+                <th>Card UID</th>
                 <th>Full Name</th>
                 <th>Gender</th>
                 <th>Email Address</th>
@@ -71,6 +72,7 @@
                     {% endif %}
                 </td>
                 <td>{{ row.userId }}</td>
+                <td>{{ row.userCardId }}</td>
                 <td>{{ row.userName }}</td>
                 <td>{{ row.userGender }}</td>
                 <td>{{ row.userEmail }}</td>
