--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -239,6 +239,7 @@
                     <th>No</th>
                     <th>Account Status</th> 
                     <th>User ID</th>
+                    <th>Card UID</th>
                     <th>Full Name</th>
                     <th>Gender</th>
                     <th>Email Address</th>
@@ -268,6 +269,7 @@
                         {% endif %}
                     </td>
                     <td>{{ row.userId }}</td>
+                    <td>{{ row.userCardId }}</td>
                     <td>{{ row.userName }}</td>
                     <td>{{ row.userGender }}</td>
                     <td>{{ row.userEmail }}</td>
