--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -269,7 +269,7 @@
                         {% endif %}
                     </td>
                     <td>{{ row.userId }}</td>
-                    <td>{{ row.userCardId }}</td>
+                    <td>{{ row.userCardId or '---' }}</td>
                     <td>{{ row.userName }}</td>
                     <td>{{ row.userGender }}</td>
                     <td>{{ row.userEmail }}</td>
