--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -271,7 +271,7 @@
                     <td>{{ row.userId }}</td>
                     <td>{{ row.userCardId or '---' }}</td>
                     <td>{{ row.userName }}</td>
-                    <td>{{ row.userGender[:1] }}</td>
+                    <td>{{ row.userGender }}</td>
                     <td>{{ row.userEmail }}</td>
                     <td>{{ row.userContact }}</td>
                     <td>
